# studicaRos2

src/studica_control/: CMakeLists.txt  package.xml
src/studica_control/config/: params.yaml
src/studica_control/include/studica_control/: cobra_component.h  dc_encoder_component.h  diff_drive_component.h  diff_drive_odometry.h  dio_component.h  encoder_component.h  imu_component.h  mecanum_drive_component.h  mecanum_drive_odometry.h  servo_component.h  sharp_component.h  studica_odometry.h  three_wheel_drive.h  titan_component.h  ultrasonic_component.h
src/studica_control/launch/: mapping_launch.py  nodes.launch.py  studica_launch.py
src/studica_control/msg/: DutyCycleEncoderMsg.msg  EncoderMsg.msg  InitializeParams.msg
src/studica_control/src/: manual_composition.cpp
src/studica_control/src/components/: cobra_component.cpp  dc_encoder_component.cpp  diff_drive_component.cpp  diff_drive_odometry.cpp  dio_component.cpp  encoder_component.cpp  imu_component.cpp  mecanum_drive_component.cpp  mecanum_drive_odometry.cpp  servo_component.cpp  sharp_component.cpp  studica_odometry.cpp  three_wheel_drive.cpp  titan_component.cpp  ultrasonic_component.cpp
src/studica_control/srv/: ControlImu.srv  SetData.srv
